[package]
authors = ["Mark Hintz <markinportland7@gmail.com>"]
name = "lsystem"
version = "0.1.0"

[dependencies]
arcball-cgmath = { path = "../arcball-cgmath", branch = "master" }
cgmath = { path = "../cgmath-rs", branch = "master" }
glium = "^0.13.5"
matrixstack = { path = "../matrixstack", branch = "master" }
num = "*"
rand = "0.3"
num-traits = "0.1"
vertex_index_mesh = { path = "vertex_index_mesh" }
line_mesh = { path = "line_mesh" }
convex_hull = { path = "../convex_hull", branch = "master" }
half_edge_mesh = { path = "../half_edge_mesh", branch = "master" }
